data/derived/comb/progs/unify/prog7011.ml.out
Characters 21-22:
  let _ = isFPoint 1 = 1;;
                       ^
Error: This expression has type int but an expression was expected of type
         bool
